ADD - html and css structure

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <title>Griglia Campo Minato</title>
 </head>
 <body>
+    <header>
+        <section>
+            <form action="" id="submit">
+                <button>
+                    click me
+                </button>
+            </form>
+        </section>
+    </header>
+    <main>
+        <div class="my-container">
+
+        </div>
+    </main>    
     <script src="js/script.js"></script>
 </body>
 </html>
