ADD 100 box generation

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <header>
-        <section>
+        <div class="my-container">
             <form action="" id="submit">
                 <button>
                     click me
                 </button>
             </form>
-        </section>
+        </div>
     </header>
     <main>
         <div class="my-container">
