ADD - select in html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <header>
         <div class="my-container">
             <form action="" id="submit">
+                <label for="difficulty">choose diffciulty</label>
+                <select name="difficulty" id="select">
+                    <option value="hard" id="hard">hard</option>
+                    <option value="medium" id="medium">medium</option>
+                    <option value="easy" id="easy">easy</option>
+                </select>
                 <button>
                     click me
                 </button>
