EDIT- box height widths

--- a/index.html
+++ b/index.html
@@ -9,23 +9,25 @@
 </head>
 <body>
     <header>
-        <div class="my-container">
-            <form action="" id="submit">
-                <label for="difficulty">choose diffciulty</label>
-                <select name="difficulty" id="select">
-                    <option value="hard" id="hard">hard</option>
-                    <option value="medium" id="medium">medium</option>
-                    <option value="easy" id="easy">easy</option>
-                </select>
-                <button>
-                    click me
-                </button>
-            </form>
-        </div>
+        
+        <form action="" id="submit">
+            <label for="difficulty">choose diffciulty</label>
+            <select name="difficulty" id="select">
+                <option value="hard" id="hard">hard</option>
+                <option value="medium" id="medium">medium</option>
+                <option value="easy" id="easy">easy</option>
+            </select>
+            <button>
+                click me
+            </button>
+        </form>
+        
     </header>
     <main>
         <div class="my-container">
+            <div class="row">
 
+            </div>
         </div>
     </main>    
     <script src="js/script.js"></script>
