ADD reset button

--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
             <button>
                 click me
             </button>
+            
         </form>
-        
+            <button type="button" id="reset">
+                reset
+            </button>
     </header>
     <main>
         <div class="my-container">
